test/good/classes/super04.px

class A def
    x: Char

    constructor def
        this.x = 'A'

    func f() def
        print this.x

class B(A) def
    y: Int

class C(B) def
    func f() def
        print 'C'
        super()

C().f()
