test/bad/classes/method04.px

class Test def
    func f(Char x: 0) def
        skip
